--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "4.5.2",
-    "moment": "2.27.0",
+    "moment": "^2.30.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "8.5.1",
     "tui-calendar": "1.12.13",
     "tui-date-picker": "4.1.0",
